@@ -9,6 +9,8 @@ Changes in beta release 2.5.22 (not released yet)
 
    - Windows with aspect ratio no longer maximize past the screen
      edges.
+   - Fixed CenterPlacement with Xinerama screens.
+   - Fixed CascadePlacement with title direction west and east
 
 -------------------------------------------------------------------
 
